--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
     <figure class="hero" alt="Team Engaged in Business Collaboration"></figure>
     <main class="content">
-        <section class="search-engine-optimization">
+        <section id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="SEO Work Station Displaying Company Assets and Strengths: Backlink, Content, Headings, Link Building, Social Media and Media Compatibility" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
